# gadget_clock

./: .clang-format  .gitignore  README.md  com.github.stsdc.gadget_clock.json  dev.stsdc.gadget_clock.json  dev.stsdc.gadget_clock.json~  gtkmm.json  io.github.stsdc.gadget_clock.json  meson.build
.github/workflows/: flatpak-x-checker.yml  main.yml
.github/workflows/.github/workflows/: flatpak-x-checker.yml
data/: gadget_clock.desktop.in  gadget_clock.metainfo.xml.in  meson.build
data/images/: images.gresource.xml
data/styles/: main.css  styles.gresource.xml
src/: clock.cpp  clock.h  clockarea.cpp  clockarea.h  main.cpp  meson.build  settingswindow.cpp  settingswindow.h
