gnome = import('gnome')

images_gresource = gnome.compile_resources(
    'gresource_images', 'images/images.gresource.xml',
    source_dir: 'images',
    c_name: 'as1'
)

styles_gresource = gnome.compile_resources(
    'gresource_styles',
    'styles/styles.gresource.xml',
    source_dir: 'styles',
    c_name: 'as2'
)